--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+    <script src="auth.js"></script>
     <style>
         /* iOS Optimizations */
         @supports (-webkit-touch-callout: none) {
@@ -160,16 +161,15 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links">
-            <li><a href="dashboard.html" class="active">
-                <i class="fas fa-home"></i>Dashboard
-            </a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="executive.html">Executives</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="#" id="logoutBtn">
-                <i class="fas fa-sign-out-alt"></i>Logout
-            </a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/executive">Executives</a></li>
+            <li><a href="/news">News</a></li>
+            <li class="login-required"><a href="/register">Join Us</a></li>
+            <li class="login-required"><a href="/login">Login</a></li>
+            <li class="dashboard-access"><a href="/dashboard">Dashboard</a></li>
+            <li class="logout-btn"><a href="#" onclick="handleLogout(event)">Logout</a></li>
         </ul>
     </nav>
 
