--- a/register.html
+++ b/register.html
@@ -71,67 +71,28 @@
                 </div>
             </div>
 
-            <form class="login-form" id="registerForm" novalidate>
+            <form class="register-form" id="registerForm">
                 <div class="form-group">
-                    <label for="username">
-                        <i class="fas fa-at"></i>
-                        Username
-                    </label>
-                    <input type="text" id="username" name="username" required
-                           placeholder="Choose a username"
-                           autocomplete="username"
-                           minlength="3"
-                           pattern="^[a-zA-Z0-9_-]{3,20}$">
-                    <small class="form-hint">3-20 characters, letters, numbers, - and _ only</small>
-                    <div class="form-validation-icon"></div>
+                    <label for="fullName">Full Name</label>
+                    <input type="text" id="fullName" name="fullName" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="fullName">
-                        <i class="fas fa-user"></i>
-                        Full Name
-                    </label>
-                    <input type="text" id="fullName" name="fullName" required
-                           placeholder="Enter your full name"
-                           autocomplete="name"
-                           minlength="2"
-                           pattern="^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$">
-                    <small class="form-hint">Please enter your real name as it will appear on your membership card</small>
-                    <div class="form-validation-icon"></div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="email">
-                        <i class="fas fa-envelope"></i>
-                        Email Address
-                    </label>
-                    <input type="email" id="email" name="email" required
-                           placeholder="Enter your email"
-                           autocomplete="email">
-                    <small class="form-hint">We'll send a verification link to this email</small>
-                    <div class="form-validation-icon"></div>
-                </div>
-
-                <div class="form-group">
-                    <label for="password">
-                        <i class="fas fa-lock"></i>
-                        Password
-                    </label>
-                    <div class="password-input-wrapper">
-                        <div class="password-input-group">
-                            <input type="password" id="password" name="password" required
-                                   placeholder="Create a password"
-                                   autocomplete="new-password"
-                                   minlength="8">
-                            <button type="button" class="toggle-password" aria-label="Toggle password visibility">
-                                <i class="far fa-eye"></i>
-                            </button>
-                        </div>
-                        <div class="password-strength-meter">
-                            <div class="strength-bar"></div>
-                        </div>
+                    <label for="password">Password</label>
+                    <div class="password-input-container">
+                        <input type="password" id="password" name="password" required>
+                        <button type="button" class="toggle-password">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
-                    <small class="form-hint">Must be at least 8 characters with numbers and letters</small>
+                    <div class="strength-meter">
+                        <div class="strength-bar"></div>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -303,10 +264,9 @@
             registerForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
                 
-                // Get form values
                 const fullName = document.getElementById('fullName').value.trim();
                 const email = document.getElementById('email').value.trim();
-                const password = passwordInput.value;
+                const password = document.getElementById('password').value;
                 const confirmPassword = document.getElementById('confirmPassword').value;
                 const terms = document.getElementById('terms').checked;
 
