--- a/register.html
+++ b/register.html
@@ -34,12 +34,12 @@
         </ul>
     </nav>
 
-    <main class="login-container">
+    <main class="register-container">
         <div class="register-box">
             <div class="register-header">
                 <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" class="register-logo">
-                <h2 style="color: #171a20;">Join Blitz Tesla Club</h2>
-                <p style="color: #666;">Create your account to become a member</p>
+                <h2>Join Blitz Tesla Club</h2>
+                <p>Create your account to become a member</p>
             </div>
 
             <div class="registration-progress">
