--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 <body class="login-page">
     <nav>
         <div class="logo">
-            <a href="/">
+            <a href="/index.html">
                 <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
                 <span>BLITZ TESLA CLUB</span>
             </a>
@@ -24,13 +24,13 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="executive.html">Executives</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="#join">Join Us</a></li>
-            <li><a href="/login">Login</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/events.html">Events</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+            <li><a href="/executive.html">Executives</a></li>
+            <li><a href="/news.html">News</a></li>
+            <li><a href="/register.html">Join Us</a></li>
+            <li><a href="/login.html">Login</a></li>
         </ul>
     </nav>
 
@@ -308,41 +308,28 @@
                         throw new Error('Passwords do not match');
                     }
 
-                    // Generate verification token
+                    // Generate verification token using UUID v4
                     const verificationToken = crypto.randomUUID();
+                    console.log('Generated verification token:', verificationToken);
 
                     // Generate member ID first
                     const apiUrl = window.location.hostname === 'localhost' 
                         ? 'http://localhost:3000/api/generate-member-id'
                         : 'https://www.blitztclub.com/api/generate-member-id';
                     
-                    console.log('Making request to:', apiUrl);
                     const response = await fetch(apiUrl, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                             'Accept': 'application/json'
                         },
-                        body: JSON.stringify({ membership_type: 'standard' }),
-                        credentials: 'same-origin',
-                        mode: 'cors'
+                        body: JSON.stringify({ membership_type: 'standard' })
                     });
 
                     const responseData = await response.json();
-                    console.log('Server response:', responseData);
-
-                    if (!response.ok) {
-                        throw new Error(
-                            responseData.error?.message || 
-                            responseData.error || 
-                            responseData.message || 
-                            'Failed to generate member ID'
-                        );
-                    }
-
                     memberId = responseData.member_id;
 
-                    // Create auth user
+                    // Create auth user with verification token
                     const { data, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
@@ -351,31 +338,16 @@
                                 full_name: fullName,
                                 member_id: memberId,
                                 membership_type: 'standard',
-                                membership_status: 'pending'
-                            },
-                            emailRedirectTo: `${window.location.origin}/verify-email`,
-                            autoConfirm: false
+                                membership_status: 'pending',
+                                verification_token: verificationToken
+                            }
                         }
                     });
 
-                    if (authError) {
-                        console.error('Auth error:', authError);
-                        if (authError.message.includes('already registered')) {
-                            throw new Error('An account with this email already exists');
-                        }
-                        throw new Error(authError.message);
-                    }
-
+                    if (authError) throw authError;
                     authData = data;
 
-                    if (!authData?.user?.id) {
-                        throw new Error('Failed to create user account');
-                    }
-
-                    // Wait a moment for auth to complete
-                    await new Promise(resolve => setTimeout(resolve, 1000));
-
-                    // Create profile through server endpoint
+                    // Create profile with verification token
                     const profileResponse = await fetch('/api/create-profile', {
                         method: 'POST',
                         headers: {
@@ -390,32 +362,29 @@
                         })
                     });
 
-                    const profileData = await profileResponse.json();
-
-                    if (!profileResponse.ok || (profileData.error && !profileData.message?.includes('already exists'))) {
-                        console.error('Profile error:', profileData);
-                        throw new Error('Failed to create user profile');
-                    }
-
                     // Send verification email using FormSubmit
-                    const verificationUrl = `https://www.blitztclub.com/verify-email?token=${verificationToken}`;
+                    const verificationUrl = `https://www.blitztclub.com/verify-email.html?token=${verificationToken}`;
                     const formData = new FormData();
                     formData.append('email', email);
                     formData.append('_captcha', 'false');
                     formData.append('_template', 'box');
                     formData.append('_subject', 'Verify Your Blitz Tesla Club Membership');
                     formData.append('_cc', 'info@blitztclub.com');
-                    formData.append('message', `Welcome to Blitz Tesla Club!
+                    formData.append('message', `
+Welcome to Blitz Tesla Club!
 
 Your Member ID: ${memberId}
 
 Please click the link below to verify your email:
 ${verificationUrl}
 
+This verification link will expire in 24 hours.
+Please complete the verification on the same device you registered from.
+
 Best regards,
 Blitz Tesla Club Team`);
 
-                    const emailResponse = await fetch(`https://formsubmit.co/ajax/${email}`, {
+                    const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
                         method: 'POST',
                         body: formData
                     });
@@ -424,7 +393,7 @@ Blitz Tesla Club Team`);
                         throw new Error('Failed to send verification email');
                     }
 
-                    // Store email and verification token for resend functionality
+                    // Store verification data in localStorage
                     localStorage.setItem('pendingVerificationEmail', email);
                     localStorage.setItem('verificationToken', verificationToken);
                     localStorage.setItem('pendingMemberId', memberId);
@@ -435,38 +404,7 @@ Blitz Tesla Club Team`);
 
                 } catch (error) {
                     console.error('Registration error:', error);
-                    let errorMessage = 'Registration failed. Please try again.';
-
-                    if (error.message.includes('already exists')) {
-                        errorMessage = 'An account with this email already exists. Please login instead.';
-                    } else if (error.message.includes('Invalid email')) {
-                        errorMessage = 'Please enter a valid email address.';
-                    } else if (error.message.includes('password')) {
-                        errorMessage = 'Password must be at least 6 characters long.';
-                    } else if (error.message.includes('Database error')) {
-                        errorMessage = 'Server error. Please try again in a few minutes.';
-                    }
-
-                    // If we have an auth user but profile creation failed
-                    if (authData?.user?.id) {
-                        try {
-                            // Call cleanup endpoint
-                            const cleanupResponse = await fetch('/api/cleanup-orphaned-users', {
-                                method: 'POST',
-                                headers: {
-                                    'Content-Type': 'application/json'
-                                },
-                                body: JSON.stringify({ user_id: authData.user.id })
-                            });
-
-                            if (!cleanupResponse.ok) {
-                                console.error('Failed to clean up user:', await cleanupResponse.text());
-                            }
-                        } catch (cleanupError) {
-                            console.error('Failed to clean up auth user:', cleanupError);
-                        }
-                    }
-                    alert(errorMessage);
+                    alert(error.message || 'Registration failed. Please try again.');
                 }
             });
 
