--- a/register.html
+++ b/register.html
@@ -11,11 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        body.login-page {
+            background: linear-gradient(135deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.9) 100%);
+            min-height: 100vh;
+        }
+    </style>
 </head>
 <body class="login-page">
     <nav>
         <div class="logo">
-            <a href="/index.html">
+            <a href="./index.html">
                 <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
                 <span>BLITZ TESLA CLUB</span>
             </a>
@@ -24,13 +30,13 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/events.html">Events</a></li>
-            <li><a href="/gallery.html">Gallery</a></li>
-            <li><a href="/executive.html">Executives</a></li>
-            <li><a href="/news.html">News</a></li>
-            <li><a href="/register.html">Join Us</a></li>
-            <li><a href="/login.html">Login</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./events.html">Events</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="./executive.html">Executives</a></li>
+            <li><a href="./news.html">News</a></li>
+            <li><a href="./register.html">Join Us</a></li>
+            <li><a href="./login.html">Login</a></li>
         </ul>
     </nav>
 
@@ -159,29 +165,29 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <div class="footer-links">
-                    <a href="index.html">Home</a>
-                    <a href="events.html">Events</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./events.html">Events</a>
+                    <a href="./gallery.html">Gallery</a>
+                    <a href="./contact.html">Contact</a>
                 </div>
             </div>
             
             <div class="footer-section">
                 <h3>Member Area</h3>
                 <div class="footer-links">
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
-                    <a href="sponsors.html">Our Sponsors</a>
-                    <a href="#member-benefits">Member Benefits</a>
+                    <a href="./login.html">Login</a>
+                    <a href="./register.html">Register</a>
+                    <a href="./sponsors.html">Our Sponsors</a>
+                    <a href="./index.html#member-benefits">Member Benefits</a>
                 </div>
             </div>
             
             <div class="footer-section">
                 <h3>Legal</h3>
                 <div class="footer-links">
-                    <a href="privacy.html">Privacy Policy</a>
-                    <a href="terms.html">Terms of Service</a>
-                    <a href="about.html">About Us</a>
+                    <a href="./privacy.html">Privacy Policy</a>
+                    <a href="./terms.html">Terms of Service</a>
+                    <a href="./about.html">About Us</a>
                 </div>
             </div>
 
@@ -363,7 +369,7 @@
                     });
 
                     // Send verification email using FormSubmit
-                    const verificationUrl = `https://www.blitztclub.com/verify-email.html?token=${verificationToken}`;
+                    const verificationUrl = `verify-email.html?token=${verificationToken}`;
                     const formData = new FormData();
                     formData.append('email', email);
                     formData.append('_captcha', 'false');
