--- a/verification-failed.html
+++ b/verification-failed.html
@@ -15,12 +15,33 @@
         <div class="verification-content error">
             <i class="fas fa-exclamation-circle"></i>
             <h1>Verification Failed</h1>
-            <p>The verification link is invalid or has expired.</p>
-            <a href="dashboard.html" class="btn primary-btn">
-                <i class="fas fa-redo"></i>
-                Return to Dashboard
-            </a>
+            <div class="error-message" id="errorDetails"></div>
+            <p>Please try the following:</p>
+            <ul>
+                <li>Check if you're using the most recent verification link</li>
+                <li>Make sure you're using the same device you registered from</li>
+                <li>Request a new verification email</li>
+            </ul>
+            <div class="actions">
+                <a href="register.html" class="btn">Register Again</a>
+                <button id="resendBtn" class="btn">Resend Verification Email</button>
+            </div>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Display specific error message if available
+            const errorMessage = localStorage.getItem('verificationError');
+            const errorDetails = document.getElementById('errorDetails');
+            if (errorMessage) {
+                errorDetails.textContent = errorMessage;
+                // Clear the error message
+                localStorage.removeItem('verificationError');
+            } else {
+                errorDetails.textContent = 'Verification process failed. Please try again.';
+            }
+        });
+    </script>
 </body>
 </html> 
