fix verification token

--- a/verification-failed.html
+++ b/verification-failed.html
@@ -14,17 +14,19 @@
         <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" class="verification-logo">
         <div class="verification-content error">
             <i class="fas fa-exclamation-circle"></i>
-            <h1>Verification Failed</h1>
-            <div class="error-message" id="errorDetails"></div>
-            <p>Please try the following:</p>
-            <ul>
-                <li>Check if you're using the most recent verification link</li>
-                <li>Make sure you're using the same device you registered from</li>
-                <li>Request a new verification email</li>
-            </ul>
-            <div class="actions">
-                <a href="register.html" class="btn">Register Again</a>
-                <button id="resendBtn" class="btn">Resend Verification Email</button>
+            <div class="verification-failed">
+                <h1>Verification Failed</h1>
+                <div class="error-message" id="errorDetails"></div>
+                <p>Please try the following:</p>
+                <ul>
+                    <li>Check if you're using the most recent verification link</li>
+                    <li>Make sure you're using the same device you registered from</li>
+                    <li>Request a new verification email</li>
+                </ul>
+                <div class="actions">
+                    <a href="register.html" class="btn">Register Again</a>
+                    <button id="resendBtn" class="btn">Resend Verification Email</button>
+                </div>
             </div>
         </div>
     </div>
