--- a/verify-email.html
+++ b/verify-email.html
@@ -90,22 +90,29 @@
 
                 // Get profile by verification token
                 console.log('Fetching profile for token...');
-                const { data: profile, error: profileError } = await supabaseClient
+                const { data: profiles, error: profileError } = await supabaseClient
                     .from('profiles')
                     .select('*')
-                    .eq('verification_token', token)
-                    .single();
+                    .eq('verification_token', token);
 
                 if (profileError) {
                     console.error('Profile fetch error:', profileError);
                     throw new Error(`Failed to fetch profile: ${profileError.message}`);
                 }
 
-                if (!profile) {
+                console.log('Profiles found:', profiles ? profiles.length : 0);
+
+                if (!profiles || profiles.length === 0) {
                     console.error('No profile found for token');
-                    throw new Error('Invalid or expired verification token');
+                    throw new Error('Invalid or expired verification token. Please request a new verification email.');
                 }
 
+                if (profiles.length > 1) {
+                    console.error('Multiple profiles found for token');
+                    throw new Error('Invalid verification state. Please contact support.');
+                }
+
+                const profile = profiles[0];
                 console.log('Profile found:', { id: profile.id, status: profile.membership_status });
 
                 // Update profile status
