--- a/verify-email.html
+++ b/verify-email.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="login-page">
     <nav>
@@ -75,70 +74,41 @@
             const token = urlParams.get('token');
 
             if (!token) {
-                window.location.href = './verification-failed.html';
+                window.location.href = 'verification-failed.html';
                 return;
             }
 
             try {
-                console.log('Starting verification process with token:', token);
-                
-                // Initialize Supabase
-                const supabaseClient = supabase.createClient(
-                    'https://qhkcrrphsjpytdfqfamq.supabase.co',
-                    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI'
-                );
-
                 // Get profile by verification token
-                console.log('Fetching profile for token...');
-                const { data: profiles, error: profileError } = await supabaseClient
+                const { data: profile, error: profileError } = await supabaseClient
                     .from('profiles')
                     .select('*')
-                    .eq('verification_token', token);
+                    .eq('verification_token', token)
+                    .single();
 
-                if (profileError) {
-                    console.error('Profile fetch error:', profileError);
-                    throw new Error(`Failed to fetch profile: ${profileError.message}`);
+                if (profileError || !profile) {
+                    throw new Error('Invalid verification token');
                 }
-
-                console.log('Profiles found:', profiles ? profiles.length : 0);
-
-                if (!profiles || profiles.length === 0) {
-                    console.error('No profile found for token');
-                    throw new Error('Invalid or expired verification token. Please request a new verification email.');
-                }
-
-                if (profiles.length > 1) {
-                    console.error('Multiple profiles found for token');
-                    throw new Error('Invalid verification state. Please contact support.');
-                }
-
-                const profile = profiles[0];
-                console.log('Profile found:', { id: profile.id, status: profile.membership_status });
 
                 // Update profile status
-                console.log('Updating profile status...');
                 const { error: updateError } = await supabaseClient
                     .from('profiles')
                     .update({
                         membership_status: 'active',
-                        verification_token: null,
-                        verified_at: new Date().toISOString()
+                        verification_token: null
                     })
                     .eq('id', profile.id);
 
                 if (updateError) {
-                    console.error('Profile update error:', updateError);
-                    throw new Error(`Failed to update profile: ${updateError.message}`);
+                    throw updateError;
                 }
 
-                console.log('Verification successful, redirecting to success page...');
-                window.location.href = './verification-success.html';
+                // Redirect to success page
+                window.location.href = `verification-success.html?verified=true&id=${profile.id}`;
 
             } catch (error) {
                 console.error('Verification error:', error);
-                // Store error message for display
-                localStorage.setItem('verificationError', error.message);
-                window.location.href = './verification-failed.html';
+                window.location.href = 'verification-failed.html';
             }
         });
     </script>
